Add font definitions to body

--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,7 @@
 /* $Id$ */
 body {
   background: #333333 url('../img/body_bg.jpg') repeat-x left top;
+  font-size: 13px;
+  color: #333333;
+  font-family: Arial;
 }
