--- a/css/style.css
+++ b/css/style.css
@@ -5,3 +5,9 @@ body {
   color: #333333;
   font-family: Arial;
 }
+
+#wrapper {
+  background: transparent url('../img/wrapper_bg.jpg') no-repeat left top;
+  width: 1120px;
+  margin: 0px auto;
+}
