--- a/css/style.css
+++ b/css/style.css
@@ -34,6 +34,13 @@ body {
   height: 85px;
 }
 
+#logo-wrapper {
+  height: 68px;
+  padding: 6px 0px 0px 5px;
+  width: 250px;
+  float: left;
+}
+
 /* MAIN */
 
 #container-wrapper {
