--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 /* $Id$ */
 body {
   background: #333333 url('../img/body_bg.jpg') repeat-x left top;
-  font-size: 13px;
+  font-size: 12px;
   color: #333333;
   font-family: Arial;
 }
@@ -39,6 +39,20 @@ body {
   padding: 6px 0px 0px 5px;
   width: 250px;
   float: left;
+}
+
+#secondary {
+  text-align: right;
+  padding: 10px 25px 0px 0px;
+}
+
+#secondary ul.secondary-links li {
+  padding: 0px 15px;
+}
+
+#secondary ul.secondary-links li a {
+  color: #FFFFFF;
+  text-decoration: none;
 }
 
 /* MAIN */
