--- a/css/style.css
+++ b/css/style.css
@@ -55,6 +55,51 @@ body {
   text-decoration: none;
 }
 
+#primary {
+  float: left;
+}
+
+body.search-box #primary {
+  width: 410px;
+}
+
+#search-box {
+  float: right;
+  width: 300px;
+  padding-top: 15px;
+}
+
+#edit-search-theme-form-1-wrapper {
+  float: left;
+  padding-right: 10px;
+}
+
+#edit-search-theme-form-1 {
+  border: 1px solid #DA2E02;
+  -moz-border-radius: 5px;
+  -webkit-border-radius: 5px;
+  border-radius: 5px;
+  height: 25px;
+  width: 180px;
+  float: left;
+  padding: 2px 5px;
+}
+
+#search-box #edit-submit {
+  border: 1px solid #040302;
+  color: #FFFFFF;
+  background: #353535;
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#353535', endColorstr='#0B0806');
+  background: -webkit-gradient(linear, left top, left bottom, from(#353535), to(#0B0806));
+  background: -moz-linear-gradient(top, #353535, #0B0806);
+  padding: 5px 15px;
+  float: left;
+  margin-top: 13px;
+  -moz-border-radius: 5px;
+  -webkit-border-radius: 5px;
+  border-radius: 5px;
+}
+
 /* MAIN */
 
 #container-wrapper {
