--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,29 @@ body {
   font-family: Arial;
 }
 
+a {
+  text-decoration: none;
+  color: #99002B;
+}
+
+h1, h2, h3 {
+  font-family: Georgia;
+}
+
+h1 {
+  font-size: 26px;
+  color: #99002B;
+}
+
+h2, h2 a {
+  font-size: 20px;
+}
+
+h3, h3 a {
+  font-size: 17px;
+  color: #666666;
+}
+
 .c-b {
   clear: both;
 }
